Fixed button issue...no longer bleeding rainbows

--- a/styles/main.css
+++ b/styles/main.css
@@ -235,7 +235,7 @@ select {
     }
 }
 
-.button-85:after {
+#button-85:after {
     z-index: -1;
     content: "";
     position: absolute;
